[tool.poetry]
name = "templates"
version = "0.1.0"
description = ""
authors = ["Michał Poręba <michalporeba@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
